删除一部分多余文件

--- a/public/color.less
+++ b/public/color.less
@@ -1408,7 +1408,7 @@ this.tinycolor = tinycolor;
 @green-3: color(~`colorPalette("@{green-6}", 3)`);
 @green-4: color(~`colorPalette("@{green-6}", 4)`);
 @green-5: color(~`colorPalette("@{green-6}", 5)`);
-@green-6: #52c41a;
+@green-6: #1890ff;
 @green-7: color(~`colorPalette("@{green-6}", 7)`);
 @green-8: color(~`colorPalette("@{green-6}", 8)`);
 @green-9: color(~`colorPalette("@{green-6}", 9)`);
@@ -2281,7 +2281,7 @@ i.trigger:hover {
   color: #f5222d;
 }
 .numberInfo .numberInfoValue .subTotal :global .anticon-caret-down {
-  color: #52c41a;
+  color: #1890ff;
 }
 .numberInfolight .numberInfoValue > span {
   color: rgba(0, 0, 0, 0.65);
@@ -2300,7 +2300,7 @@ i.trigger:hover {
   color: rgba(0, 0, 0, 0.85);
 }
 .result .icon > .success {
-  color: #52c41a;
+  color: #1890ff;
 }
 .result .icon > .error {
   color: #f5222d;
@@ -2396,14 +2396,14 @@ i.trigger:hover {
   color: #f5222d;
 }
 .trendItem .down {
-  color: #52c41a;
+  color: #1890ff;
 }
 .trendItem.trendItemGrey .up,
 .trendItem.trendItemGrey .down {
   color: rgba(0, 0, 0, 0.65);
 }
 .trendItem.reverseColor .up {
-  color: #52c41a;
+  color: #1890ff;
 }
 .trendItem.reverseColor .down {
   color: #f5222d;
@@ -2452,7 +2452,7 @@ a.listItemMetaTitle {
   border-radius: 4px;
 }
 :global font.strong {
-  color: #52c41a;
+  color: #1890ff;
 }
 :global font.medium {
   color: #faad14;
@@ -2522,7 +2522,7 @@ a.listItemMetaTitle {
   color: @primary-color;
 }
 .success {
-  color: #52c41a;
+  color: #1890ff;
 }
 .warning {
   color: #faad14;
@@ -2614,7 +2614,7 @@ mark {
   background-color: #f6ffed;
 }
 .ant-alert-success .ant-alert-icon {
-  color: #52c41a;
+  color: #1890ff;
 }
 .ant-alert-info {
   border: 1px solid color(~`colorPalette("@{primary-color}", 3)`);
@@ -2745,7 +2745,7 @@ mark {
   border-radius: 50%;
 }
 .ant-badge-status-success {
-  background-color: #52c41a;
+  background-color: #1890ff;
 }
 .ant-badge-status-processing {
   background-color: @primary-color;
@@ -4604,7 +4604,7 @@ form .ant-upload {
   box-shadow: none;
 }
 .has-success.has-feedback .ant-form-item-children-icon {
-  color: #52c41a;
+  color: #1890ff;
 }
 .has-warning .ant-form-explain,
 .has-warning .ant-form-split {
@@ -5584,7 +5584,7 @@ form .ant-upload {
   background: #fff;
 }
 .ant-message-success .anticon {
-  color: #52c41a;
+  color: #1890ff;
 }
 .ant-message-error .anticon {
   color: #f5222d;
@@ -5648,7 +5648,7 @@ form .ant-upload {
   color: @primary-color;
 }
 .ant-confirm-success .ant-confirm-body > .anticon {
-  color: #52c41a;
+  color: #1890ff;
 }
 .ant-notification {
   color: rgba(0, 0, 0, 0.65);
@@ -5665,7 +5665,7 @@ form .ant-upload {
   background-color: transparent;
 }
 .ant-notification-notice-icon-success {
-  color: #52c41a;
+  color: #1890ff;
 }
 .ant-notification-notice-icon-info {
   color: @primary-color;
@@ -5876,7 +5876,7 @@ form .ant-upload {
   background-color: @primary-color;
 }
 .ant-progress-success-bg {
-  background-color: #52c41a;
+  background-color: #1890ff;
 }
 .ant-progress-text {
   color: rgba(0, 0, 0, 0.45);
@@ -5892,10 +5892,10 @@ form .ant-upload {
   color: #f5222d;
 }
 .ant-progress-status-success .ant-progress-bg {
-  background-color: #52c41a;
+  background-color: #1890ff;
 }
 .ant-progress-status-success .ant-progress-text {
-  color: #52c41a;
+  color: #1890ff;
 }
 .ant-progress-circle .ant-progress-inner {
   background-color: transparent;
@@ -5907,7 +5907,7 @@ form .ant-upload {
   color: #f5222d;
 }
 .ant-progress-circle.ant-progress-status-success .ant-progress-text {
-  color: #52c41a;
+  color: #1890ff;
 }
 .ant-radio-group {
   color: rgba(0, 0, 0, 0.65);
@@ -7034,13 +7034,13 @@ tr.ant-table-expanded-row:hover {
   color: #fff;
 }
 .ant-tag-green {
-  color: #52c41a;
+  color: #1890ff;
   background: #f6ffed;
   border-color: #b7eb8f;
 }
 .ant-tag-green-inverse {
-  background: #52c41a;
-  border-color: #52c41a;
+  background: #1890ff;
+  border-color: #1890ff;
   color: #fff;
 }
 .ant-tag-blue {
@@ -7203,8 +7203,8 @@ li.ant-time-picker-panel-select-option-disabled:hover {
   color: #f5222d;
 }
 .ant-timeline-item-head-green {
-  border-color: #52c41a;
-  color: #52c41a;
+  border-color: #1890ff;
+  color: #1890ff;
 }
 .ant-timeline-item-head-custom {
   border: 0;
@@ -7653,7 +7653,7 @@ li.ant-tree-treenode-disabled > .ant-tree-node-content-wrapper:hover {
   color: rgba(0, 0, 0, 0.45);
 }
 .ant-upload-list .ant-upload-success-icon {
-  color: #52c41a;
+  color: #1890ff;
 }
 
 .drawer .drawer-content {
@@ -7674,7 +7674,7 @@ li.ant-tree-treenode-disabled > .ant-tree-node-content-wrapper:hover {
   border-radius: 4px;
 }
 font.strong {
-  color: #52c41a;
+  color: #1890ff;
 }
 font.medium {
   color: #faad14;
